<resources>
    <string name="app_name">Star Wars Client</string>
    <string name="searchHint">Search Star Wars</string>
    <string name="name">Name:</string>
    <string name="population">Population:</string>
    <string name="gravity">Gravity:</string>
    <string name="height">Height:</string>
    <string name="mass">Mass:</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="average_lifespan">Average Lifespan:</string>
    <string name="language">Language:</string>
    <string name="cost">cost:</string>
    <string name="hyperdrive_rating">hyperdrive rating:</string>
    <string name="model">model:</string>
</resources>